--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -20,21 +20,22 @@
             <hr>
         </div>
     </div>
+    <!-- Edit team member form -->
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
-                {% if field.name != 'image' %}
-                <div class="form-group">
-                    {{ field | as_crispy_field }}
-                </div>
-                {% else %}
-                <div class="form-group">
-                    {{ field }}
-                </div>
-                {% endif %}
+                    {% if field.name != 'image' %}
+                    <div class="form-group">
+                        {{ field | as_crispy_field }}
+                    </div>
+                    {% else %}
+                    <div class="form-group">
+                        {{ field }}
+                    </div>
+                    {% endif %}
                 {% endfor %}
                 <div class="text-right">
                     <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
