--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -2,52 +2,53 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h1 class="logo-font mb-4">Product Management</h1>
-                <h2 class="text-main">Edit a Product</h2>
-                <hr>
-            </div>
+<div class="overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <hr>
+            <h1 class="logo-font mb-4">Product Management</h1>
+            <h2 class="text-main">Edit a Product</h2>
+            <hr>
         </div>
-
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.name != 'image' %}
-                            <div class="form-group">
-                                {{ field | as_crispy_field }}
-                            </div>
-                        {% else %}
-                            <div class="form-group">
-                                {{ field }}
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
-                        <button class="btn btn-red rounded-0" type="submit">Edit Product</button>
-                        <button type="button" class="delete-btn btn btn-danger rounded-0" data-toggle="modal"
+    </div>
+<!-- Edit Product Form -->
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+                enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                    <div class="form-group">
+                        {{ field | as_crispy_field }}
+                    </div>
+                    {% else %}
+                        <div class="form-group">
+                            {{ field }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <div class="text-right">
+                    <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
+                    <button class="btn btn-red rounded-0" type="submit">Edit Product</button>
+                    <button type="button" class="delete-btn btn btn-danger rounded-0" data-toggle="modal"
                         data-target="#deleteProduct">
                         Delete
                     </button>
-                    </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
-        </div>
+    </div>
+</div>
 <!-- Delete Modal -->
 <div class="modal fade" id="deleteProduct" tabindex="-1" role="dialog" aria-labelledby="deleteProductLabel"
     aria-hidden="true">
@@ -69,10 +70,9 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'products/js/products.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'products/js/products.js' %}"></script>
 {% endblock %}
