--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,115 +2,118 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
-                <div class="image-container my-5">
-                    {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                        </a>
+<div class="overlay"></div>
+<div class="container-fluid">
+    <!-- Product Details  -->
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2 ">
+            <div class="image-container my-5">
+                {% if product.image %}
+                    <a href="{{ product.image.url }}" target="_blank">
+                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </a>
+                {% else %}
+                    <a href="">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="product-details-container mb-5 mt-md-5">
+                <h1 class="mb-0">{{ product.name }}</h1>
+                <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                <div class="product-card-block product-card-block-blue">
+                    {% if product.category %}
+                        <p class="small mt-1 mb-0">
+                            <a href="{% url 'products' %}?category={{ product.category.name }}"
+                                class="text-main logo-font mt-1 mb-1">
+                                <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                            </a>
+                        </p>
                     {% endif %}
                 </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                    <div class="product-details-container mb-5 mt-md-5">
-                        <h1 class="mb-0">{{ product.name }}</h1>
-                        <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                        <div class="product-card-block product-card-block-blue">
-                        {% if product.category %}
-                            <p class="small mt-1 mb-0">
-                                <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-main logo-font mt-1 mb-1">
-                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                </a>
-                            </p>
-                        {% endif %}
-                    </div>
-                    <div class="product-card-block product-card-block-red">
-                        {% if product.spicerating %}
-                            <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spicerating }} / 5</small>
-                        {% else %}
-                            <small class="text-white">No Rating</small>
-                        {% endif %}
-                    </div>
-                        {% if request.user.is_superuser %}
-                            <small class="ml-3">
-                                <a href="{% url 'edit_product' product.id %}" class="edit-btn">Edit</a> |
-                                <a class="delete-btn" href="{% url 'delete_product' product.id %}">Delete</a>
-                            </small>
-                        {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            {% with product.has_sizes as s %}
-                                {% if s %}
-                                    <div class="col-12">
-                                        <p><strong>Size:</strong></p>
-                                        <select name="product_size" id="id_product_size" class="form-control rounded-0 w-50">
-                                            <option value="ys">YS</option>
-                                            <option value="ym">YM</option>
-                                        </select>
-                                    </div>
-                                {% endif %}
+                <div class="product-card-block product-card-block-red">
+                    {% if product.spicerating %}
+                        <small class="text-white"><i class="fa-solid fa-pepper-hot mr-1 mt-1"></i>{{ product.spicerating }}
+                            / 5</small>
+                    {% else %}
+                        <small class="text-white">No Rating</small>
+                    {% endif %}
+                </div>
+                {% if request.user.is_superuser %}
+                    <small class="ml-3">
+                        <a href="{% url 'edit_product' product.id %}" class="edit-btn">Edit</a> |
+                        <a class="delete-btn" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+                {% endif %}
+                <p class="mt-3">{{ product.description }}</p>
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        {% with product.has_sizes as s %}
+                            {% if s %}
                                 <div class="col-12">
-                                    <p class="mt-3"><strong>Quantity:</strong></p>
-                                    <div class="form-group w-50">
-                                        <label class="visually-hidden" for="id_qty_{{ product.id }}">Quantity:</label>
-                                        <div class="input-group input-group-{{ item.item_id }}">
-                                            <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-red rounded-0"
-                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}" aria-label="Decrease Quantity">
-                                                    <span class="icon">
-                                                        <i class="fas fa-minus"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
-                                            <input class="form-control qty_input" type="number"
-                                                name="quantity" value="1" min="1" max="99"
-                                                data-item_id="{{ product.id }}"
-                                                id="id_qty_{{ product.id }}">
-                                            <div class="input-group-append">
-                                                <button class="increment-qty btn btn-red rounded-0"
-                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}" aria-label="Increase Quantity">
-                                                    <span class="icon">
-                                                        <i class="fas fa-plus"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
+                                    <p><strong>Size:</strong></p>
+                                    <select name="product_size" id="id_product_size" class="form-control rounded-0 w-50">
+                                        <option value="ys">YS</option>
+                                        <option value="ym">YM</option>
+                                    </select>
+                                </div>
+                            {% endif %}
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <label class="visually-hidden" for="id_qty_{{ product.id }}">Quantity:</label>
+                                    <div class="input-group input-group-{{ item.item_id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-red rounded-0"
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}"
+                                                aria-label="Decrease Quantity">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                            min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-red rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}"
+                                                aria-label="Increase Quantity">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
-                                    <div class="col{% if s %}-12 mt-2{% endif %}">
-                                        <a href="{% url 'products' %}" class="btn btn-outline rounded-0 mt-5">
-                                            <span class="icon">
-                                                <i class="fas fa-chevron-left"></i>
-                                            </span>
-                                            <span class="text-uppercase">Keep Shopping</span>
-                                        </a>
-                                        <input type="submit" class="btn btn-red rounded-0 text-uppercase mt-5" value="Add to Bag">
-                                    </div>
-                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            {% endwith %}
-                        </div>
-                    </form>
-                </div>
+                            </div>
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
+                                <a href="{% url 'products' %}" class="btn btn-outline rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-red rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        {% endwith %}
+                    </div>
+                </form>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
